# Roscar

./: README.md  traffic_light_result.txt
devel/lib/pkgconfig/: ars408_ros.pc  micro_radar_yolo.pc  multi_goal_nav.pc  radar_obstacle.pc
devel/share/ars408_ros/cmake/: ars408_rosConfig.cmake
devel/share/multi_goal_nav/cmake/: multi_goal_navConfig.cmake
devel/share/radar_obstacle/cmake/: radar_obstacleConfig.cmake
src/ars408_ros/: CMakeLists.txt
src/ars408_ros/launch/: ars408_radar.launch
src/ars408_ros/scripts/: can-setup.service  setup_can.sh
src/ars408_ros/src/: .ars408_node.py.swp  ars408_node.py
src/multi_goal_nav/: CMakeLists.txt  package.xml
src/radar_obstacle/: CMakeLists.txt
src/radar_obstacle/launch/: person_detection.launch
src/radar_obstacle/scripts/: radar_only_obstacle.py
src/roscar_slam/launch/: gmapping.launch
src/rplidar_ros/launch/: rplidar_a3.launch
src/start_roscar/launch/: navigation.launch  start_roscar.launch
src/start_roscar/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/start_roscar/script/: g3_nav.py  multi_nav.py  nav_waypoints.py  smart_nav.py
src/traffic_light_yolo/scripts/: fusion_yolo_lidar.py  g3_yolo_v2.py  old_traffic.py  traffic_light_yolov8_node.py  traffic_light_yolov8_node1.py
